feat: pause and resume queues
